# MajorDomo

./: .env.dev  .gitignore  LICENSE.md  README.md  database.py  main.py  majordomo.db  majordomotest.db  pyproject.toml  requirements.txt  settings.py  startup.sh
.deta/: prog_info  state
APIs/: main.py  pyproject.toml  requirements.txt  settings.py
APIs/admin/: admin.py
APIs/alembic/: env.py
APIs/app/: .env  database.py  main.py  settings.py
APIs/auth/: auth.py  permissions.py
APIs/config/: database.py  settings.py
APIs/crud/: food.py  inventory.py  order.py  user.py
APIs/env/: pyvenv.cfg
APIs/inventory/: inventory.py
APIs/models/: __init__.py  food.py  inventory.py  order.py  user.py
APIs/routers/: food.py  inventory.py  order.py  user.py
APIs/schemas/: inventory.py  order.py  user.py
APIs/tests/: test_user.py
admin/: admin.py
admin/app/: auth.py  models.py  schemas.py
alembic/: env.py
alembic/versions/: 6845524dcf0f_alter_orders.py  b6235cb21250_update_db.py
app/auth/: authentication.py
app/config/: database.py  settings.py
app/crud/: food.py  order.py  user.py
app/dependencies/: session.py
app/models/: inventory.py  user.py
app/routers/: food.py  inventory.py  order.py  user.py
app/schemas/: order.py
auth/: authentication.py  permissions.py
config/: database.py  settings.py
crud/: food.py  inventory.py  order.py  user.py
inventory/: inventory.py
models/: inventory.py  order.py  user.py
routers/: food.py  inventory.py  order.py  user.py
schemas/: order.py  user.py
tests/: majordomotest.db  test_user.py
(+37 files in other folders)
