[tool.poetry]
name = "MajorDomo"
version = "0.1.0"
description = ""
authors = ["Aaditya Dulal <np01cp4a190231@islingtoncollege.edu.np>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
